sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value estplusPetitQue
    while(!estplusPetitQue(i-j,tampon) && i-j>=0){
           ^AlgInsertionSort:15: error: not found: value i
    setValeur(i-j,tampon)
              ^